--- a/portfolio/assets/css/style.css
+++ b/portfolio/assets/css/style.css
@@ -1010,7 +1010,7 @@ header .hem_menu {
 
 /* 풋터 레퍼런스 */
 footer {}
-.references { margin-bottom: 300px; overflow: hidden; width: 100%; margin: 0 auto; }
+.references { margin-bottom: 300px; overflow: hidden; width: 1200px; margin: 0 auto; }
 .references h2 {
     text-align: center;
     font-size: 120px;
