--- a/portfolio/assets/css/style.css
+++ b/portfolio/assets/css/style.css
@@ -57,7 +57,6 @@ footer {
     text-align: center;
     background: rgba(255, 255, 255, 0.664);
     border-radius: 50%;
-    position: absolute;
     position: fixed;
     z-index: 999;
     pointer-events: none;
@@ -74,6 +73,41 @@ footer {
     padding: 5px;
     border: 0;
     background: #0396A6;
+}
+
+/* 로딩 */
+.loadings.active {
+    transform: scale(0);
+    opacity: 0;
+}
+.loadings.active .loading_box {
+    display: none;
+}
+.loadings {
+    background: #0396A6;
+    z-index: 20000;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.ld_img {
+    width: 20vw;
+    animation: loadImg .5s infinite alternate cubic-bezier(0.25, 0.46, 0.45, 0.94);
+}
+.ld_text {
+    color: #fff;
+    text-align: center;
+}
+
+@keyframes loadImg {
+    0% { transform: translateY(-3%);}
+    100% { transform: translateY(3%);}
 }
 
 /* 헤더 */
